ECA-11362: Upgraded all calls to Object.newInstance()